k8s/04-yolo-fastapi.cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-validator
  template:
    metadata:
      labels:
        app: cat-validator
    spec:
      containers:
        - name: cat-validator
          image: docker.io/library/sadecekedi-yolo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 3Gi
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: kedi-filter-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: cat-validator
